# chromium-screenshots

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SOCIAL_POSTS.md  demo.tape  docker-compose.yml  pyproject.toml  requirements-mcp.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  dom_extraction.py  main.py  models.py  quality_assessment.py  screenshot.py  tiling.py  vision_model_config.json
docs/: api-reference.md  dom-extraction.md  mcp-server.md  quality-assessment.md  vision-ai-optimization.md
mcp/: __init__.py
screenshot_mcp/: server.py
tests/: __init__.py  test_api.py  test_cookie_security.py  test_extraction.py  test_mcp_server.py  test_mcp_storage.py  test_models.py  test_performance.py  test_quality_assessment.py  test_screenshot.py  test_storage_injection.py  test_storage_parameters.py  test_storage_security.py  test_tiling.py
tests/fixtures/: selector_test.html
